# Opswatron_v2

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  Player.cpp  Player.h  Worker.cpp  Worker.h  clihandler.cpp  clihandler.h  core.cpp  core.h  directions.h  engine.cpp  engine.h  enginehandler.cpp  enginehandler.h  gameMap.cpp  gameMap.h  gamemap.cpp  gamemap.h  main.cpp  tester.txt  utils.cpp  utils.h
